[java] removed use of guava from devtools (#12943)
Co-authored-by: Puja Jagani <puja.jagani93@gmail.com>