@@ -17,11 +17,11 @@
 
 package org.openqa.selenium.devtools.v117;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 import org.openqa.selenium.devtools.Command;
 import org.openqa.selenium.devtools.ConverterFunctions;
 import org.openqa.selenium.devtools.Event;
@@ -53,7 +53,7 @@ public class v117Target implements org.openqa.selenium.devtools.idealized.target
 
     return new Command<>(
         Target.getTargets(Optional.empty()).getMethod(),
-        ImmutableMap.of(),
+        Map.of(),
         input -> {
           List<TargetInfo> infos = mapper.apply(input);
           return infos.stream()
@@ -68,7 +68,7 @@ public class v117Target implements org.openqa.selenium.devtools.idealized.target
                           info.getOpenerId().map(id -> new TargetID(id.toString())),
                           info.getBrowserContextId()
                               .map(id -> new BrowserContextID(id.toString()))))
-              .collect(ImmutableList.toImmutableList());
+              .collect(Collectors.toUnmodifiableList());
         });
   }
 
@@ -80,7 +80,7 @@ public class v117Target implements org.openqa.selenium.devtools.idealized.target
 
     return new Command<>(
         "Target.attachToTarget",
-        ImmutableMap.of(
+        Map.of(
             "targetId",
             new org.openqa.selenium.devtools.v117.target.model.TargetID(targetId.toString()),
             "flatten",
